force-app/main/default/objects/BPFContact__c/BPFContact__c.object-meta.xml
<CustomObject>
    <label>BPF Contact</label>
    <nameField>
        <displayFormat>BPFCON-{0000}</displayFormat>
        <label>BPF Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BPF Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>