force-app/main/default/objects/BPFContact__c/fields/BPF__c.field-meta.xml
<CustomField>
    <fullName>BPF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPF</label>
    <referenceTo>BPF__c</referenceTo>
    <relationshipLabel>BPF Contacts</relationshipLabel>
    <relationshipName>BPF_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>