force-app/main/default/objects/BPFContact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BPF Contacts</relationshipLabel>
    <relationshipName>BPF_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>